Setup the code that should reload the grid with user input

--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 </head>
 <body>
     <div class="header"></div>
+    <div class="optionis">
+        <form id="sizeSubmit">
+            <label for="size">Enter Your Own Grid Area 0-100:</label>
+            <input type ="text" name="sizeText">
+            <input type ="submit">
+        </form>
+    </div>
     <div class="sketchContainer">
         <div class = "sketchBox">
             <div class="sketchGrid">
-               
+
             </div>
         </div>
     </div>
