Update call function for grid resizing

--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
 </head>
 <body>
     <div class="header"></div>
-    <div class="optionis">
-        <form id="sizeSubmit">
-            <label for="size">Enter Your Own Grid Area 0-100:</label>
-            <input type ="text" name="sizeText">
-            <input type ="submit">
-        </form>
+    <div class="options">
+        <button id="newSize">New Size!</button>
     </div>
     <div class="sketchContainer">
         <div class = "sketchBox">
