Create buttons for rainbow colored sketch and revert to black

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="header"></div>
     <div class="options">
         <button id="newSize">New Size!</button>
+        <button id="randomColor">Rainbow REEEE!!!</button>
+        <button id="blackColor">Reset to black</button>
     </div>
     <div class="sketchContainer">
         <div class = "sketchBox">
