--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     </div>
     <div class="sketchContainer">
         <div class = "sketchBox">
-            <div class="sketchGrid">
-
-            </div>
+            <div class="sketchGrid"></div>
         </div>
     </div>
     <div class="footer"></div>
