Update the CSS to add style to sketch color button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="java.js" defer></script>
 </head>
 <body>
-    <div class="header"></div>
+    <div class="header">Etch-A-Sketch</div>
     <div class="options">
         <button id="newSize">New Size!</button>
         <button id="randomColor">Rainbow REEEE!!!</button>
@@ -20,7 +20,9 @@
             <div class="sketchGrid"></div>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        Copyright James Quesadilla 
+    </div>
     
 </body>
 </html>
